--- a/src/index.css
+++ b/src/index.css
@@ -6,17 +6,15 @@
    margin: 0px;
    padding: 0px;
    top: 0px;
-   box-sizing: border-box;
+   /* box-sizing: border-box; */
     font-family: 'Times New Roman', Times, serif;
-    /* background-color: #0b1121; */
+    /* background-color: yellow; */
     color: white;
     /* border: 2px red solid !important; */
     /* z-index: 3; */
 }
 
-/* .land{
-    background-color: white;
-} */
+
  ::-webkit-scrollbar-track{
     background-color: #0b1121;
  }
