--- a/src/styles/Land.css
+++ b/src/styles/Land.css
@@ -1,9 +1,12 @@
+body, html {
+  overflow-x: hidden;
+}
 .land-container {
     position: relative;
     /* height: 650px; */
     width: 100%;
     background-color: #0b1123;
-    overflow: hidden;
+    overflow-x: hidden;
     z-index: -1;
   }
   
@@ -12,7 +15,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    /* width: 100%; */
+    width: 100%;
     height: 100%;
     z-index: 0;
   }
@@ -76,7 +79,7 @@
 
 @media (max-width: 480px) {
   .image-section {
-      max-width: 180px; /* Further reduce size for mobile screens */
-      max-height: 180px;
+      max-width: 250px; /* Further reduce size for mobile screens */
+      max-height: 250px;
   }
 }
